tests/ui/suggestions/issue-109195.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:12:5
   |
LL |     String::from::utf8;
   |     ^^^^^^^^^^^^
   |
help: there is an associated function with a similar name: `from_utf8`
   |
LL |     String::from_utf8;
   |             ~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:15:5
   |
LL |     String::from::utf8();
   |     ^^^^^^^^^^^^
   |
help: there is an associated function with a similar name: `from_utf8`
   |
LL |     String::from_utf8();
   |             ~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:18:5
   |
LL |     String::from::utf16();
   |     ^^^^^^^^^^^^
   |
help: there is an associated function with a similar name: `from_utf16`
   |
LL |     String::from_utf16();
   |             ~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:21:5
   |
LL |     String::from::method_that_doesnt_exist();
   |     ^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `from` implemented for `String`, you could use the fully-qualified path
   |
LL |     <String as Example>::from::method_that_doesnt_exist();
   |     ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:24:5
   |
LL |     str::from::utf8();
   |     ^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `from` implemented for `str`, you could use the fully-qualified path
   |
LL |     <str as Example>::from::utf8();
   |     ~~~~~~~~~~~~~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:27:5
   |
LL |     str::from::utf8_mut();
   |     ^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `from` implemented for `str`, you could use the fully-qualified path
   |
LL |     <str as Example>::from::utf8_mut();
   |     ~~~~~~~~~~~~~~~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:30:5
   |
LL |     Foo::bar::baz;
   |     ^^^^^^^^
   |
help: there is an associated function with a similar name: `bar_baz`
   |
LL |     Foo::bar_baz;
   |          ~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:33:5
   |
LL |     Foo::bar::quux;
   |     ^^^^^^^^
   |
help: there is an associated function with a similar name: `bar_quux`
   |
LL |     Foo::bar_quux;
   |          ~~~~~~~~

error[E0223]: ambiguous associated type
  --> $DIR/issue-109195.rs:36:5
   |
LL |     Foo::bar::fizz;
   |     ^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `bar` implemented for `Foo`, you could use the fully-qualified path
   |
LL |     <Foo as Example>::bar::fizz;
   |     ~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0223`.
